--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+ .img{
+   widows: 400px;  height: 400px;
+ }
